# AI_scrapping

./: .gitignore  README.md  pyproject.toml  requirements.txt
azure_function_proxy/: function_app.py  requirements.txt
config/: remote_fetch.example.yaml
init/: youtubeDOTcom_JuliaMcCoy.yaml
yt_channel_transcripts/: __init__.py  cli.py  config.py  paths.py  remote_client.py  remote_config.py  transcript_md.py  videos.py
